setup CMakeLists for debugging remove bin_vocabulary

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,4 @@ Examples/ROS/ORB_SLAM2/KeyFrameTrajectory.txt
 Examples/ROS/ORB_SLAM2/Slam_latest_Map.bin
 Examples/ROS/ORB_SLAM2/src/.ros_mono.cc.swp
 Examples/ROS/orb_debug/
-
+tools/bin_vocabulary
